--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ application.jwt.secretKey=key32key32key64key32key32key64key32key32key64key32key3
 application.jwt.tokenPrefix=Bearer 
 application.jwt.tokenExpirationAfterDays=30
 
-spring.datasource.url=jdbc:mysql://localhost:3306/videkurs_uz?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExits=true&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/e_ombor?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExits=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=komilovv123
 
