--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,12 @@ application.jwt.secretKey=key32key32key64key32key32key64key32key32key64key32key3
 application.jwt.tokenPrefix=Bearer 
 application.jwt.tokenExpirationAfterDays=30
 
-spring.datasource.url=jdbc:mysql://localhost:3306/e_ombor?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExits=true&allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=komilovv123
-
 #spring.datasource.url=jdbc:mysql://localhost:3306/e_ombor?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExits=true&allowPublicKeyRetrieval=true&useSSL=false
-#spring.datasource.username=dbaccess
-#spring.datasource.password=KomilovVideokurs.uz@123
+#spring.datasource.username=root
+#spring.datasource.password=komilovv123
+
+spring.datasource.url=jdbc:mysql://localhost:3306/e_ombor?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExits=true&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=dbaccess
+spring.datasource.password=KomilovVideokurs.uz@123
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
